----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2003-06-21 Marc Delisle  <lem9@users.sourceforge.net>
    * sql.php3: typo in call to cleanup columns 

2003-06-20 Marc Delisle  <lem9@users.sourceforge.net>
    * pdf_schema.php3: use PMA_getForeigners()
    * db_details_qbe.php3: undefined variable

2003-06-20 Garvin Hicking <me@supergarv.de>
    * db_details_importdocsql.php3: Will now NEVER reveal any filename
      the docSQL import isn't able to read. Can now only read contents
      of the 'docSQL' subdirectory and never be able to go higher than
      that level.

2003-06-19 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/sqlparser.lib.php3: analyzer for FOREIGN KEYS
    * libraries/sqlparser.lib.php3: bug 756861, DEFAULT 0 becomes DEFAULT0
    * libraries/display_tbl.lib.php3: use PMA_getForeigners()
    * libraries/relation.lib.php3: now PMA_getForeigners() gets also
      foreign keys defined in innnodb
    * tbl_select.php3: use PMA_getForeigners() also for innodb

2003-06-17 Michal Cihar  <nijel@users.sourceforge.net>
    * config.inc.php3: Fixed typo (s/'PMA_pdf_page'/'PMA_pdf_pages'/).

2003-06-17 Alexander M. Turek  <rabus@users.sourceforge.net>
    * lang/polish-*.inc.php3: Updates, thanks to Jakub Wilk (ubanus).

2003-06-16 Michal Cihar  <nijel@users.sourceforge.net>
    * index.php3: Use $cfg['DefaultTabServer'] (bug #754260).

2003-06-14 Michal Cihar  <nijel@users.sourceforge.net>
    * export.php3: Fixed saving compressed dumps on server.
    * libraries/display_export.lib.php3: Fixed description for line
      terminating character.

2003-06-13 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/sqlparser.data.php3: bug 753813, "session" is not
      a reserved word

2003-06-13 Michal Cihar  <nijel@users.sourceforge.net>
    * libraries/charset_conversion.lib.php3, libraries/common.lib.php3,
      libraries/defines_php.lib.php3, libraries/dbg/setup.php3: Use new PMA_dl