@@ -5,6 +5,13 @@ phpMyAdmin - Changelog
 $Id$
 $Source$
 
+2003-06-22 Robin Johnson <robbat2@users.sourceforge.net>
+    * scripts/updatedocs.sh: 
+        - Cleanup scripts/updatedocs.sh (I use it elsewhere as well).
+    * scripts/create-release.sh:
+        - Moved to using updatedocs.sh for updating documentation.
+        - Make tarring faster by re-arranging ops.
+
 2003-06-21 Marc Delisle  <lem9@users.sourceforge.net>
     * sql.php3: typo in call to cleanup columns 
 
